modified some property in css and html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </div>
             <div class="centernav">
                 <input class="box" type="text/icon" name="" id="" placeholder="Search">
+                <button><img class="search" src="images/Search.png" alt="" width="50px"height="46px"></button>
             </div>
             <div class="rightnav">
                 <img src="images/1.png" width="69px" alt="">
@@ -123,12 +124,13 @@
     <div class="signup">
         <p style="font-weight: 700; font-size: 12px;">Email Sign Up</p>
         <div class="signupcontent"><input style="color: #292521;" class="box2" type="text" placeholder="Enter text"><button
-                class="boxbutton">Sign Up</button></div>
+                class="boxbutton">Sign Up</button>
+        </div>
         <div></button>
             <p style="font-weight: 450; font-size: 13px; width: 380px;">By submitting, I confirm I have read and accept your<a href="">Privacy Statment</a>
                 and I would like to receive marketing and/or promotional emails from
                 Parker</p>
-    </div>
+        </div>
 
 
     </div>
@@ -169,8 +171,9 @@
         <div class="c1"><img src="images/brand-logo-footer.svg" alt="" width="50px"></div>
         <div class="c2">© 2023 PARKER, ALL RIGHTS RESERVED: PARKER</div>
         <div class="c3">
+            <img src="images/US.webp" alt="" width="20px" height="15px">
             <select class="select" name="united states" id="United states" >
-            <option value=" Unites States"></option>
+            <option value=" Unites States">United States </option>
              </select>
          </div>
 
