--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <button><img class="search" src="images/Search.png" alt="" width="50px"height="46px"></button>
             </div>
             <div class="rightnav">
-                <img src="images/1.png" width="69px" alt="">
+                <img src="images/1.png" width="69px" height="100%"  alt="">
             </div>
 
 
